lecture10/lecture10-yml/03_create_alb.yml
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
  HealthCheckPath:
    Description : Webserver HealthCheckPath
    Default: "/"
    Type: String

Resources: 

# ALB Srcurity Groups
  ALBSg1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ALB access
      VpcId: !ImportValue CloudFormation-vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: CloudFormation-alb-sg    


# ALB Create
  ALB1:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Subnets:
        - !ImportValue CloudFormation-public-subnet-1a
        - !ImportValue CloudFormation-public-subnet-1c
      SecurityGroups:
        - !Ref ALBSg1
      Tags:
        - Key: Name
          Value: CloudFormation-alb  
  ALBTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 5
      HealthCheckPath: !Ref HealthCheckPath
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 2
      VpcId: !ImportValue CloudFormation-vpc
      Targets:
        - Id: !ImportValue CloudFormation-ec2
          Port: 80
  ALBListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup
      LoadBalancerArn: !Ref ALB1
      Port: '80'
      Protocol: HTTP


# Outputs
Outputs:
  StackALB:
    Value: !Ref ALB1
    Export:
      Name: CloudFormation-alb
